--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/web-bluetooth": "^0.0.12",
+    "bindings": "^1.5.0",
     "core-js": "^2.5.4",
+    "nan": "^2.15.0",
+    "ngx-serial": "^1.0.1",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
+    "stable": "^0.1.8",
+    "tar": "^6.1.11",
+    "tslib": "^1.14.1",
+    "web-bluetooth": "^0.1.2",
+    "web3": "^1.7.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -29,9 +37,10 @@
     "@angular/cli": "~7.3.10",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "angular-cli-ghpages": "^1.0.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
